--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ li:hover {
       opacity: 1.0;
       color: rgba(1, 1, 1);
       background-color: rgba(250, 250, 250);
+      box-shadow: 2px 2px 6px rgba(255, 255, 255, 0.500);
 }
 
 .nav {
